test: vxe-table 测试

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@logicflow/extension": "^0.7.1",
     "@vueuse/core": "^6.7.1",
     "@vueuse/motion": "^2.0.0-beta.4",
+    "@vueuse/shared": "^6.7.1",
     "animate.css": "^4.1.1",
     "await-to-js": "^3.0.0",
     "axios": "^0.21.1",
@@ -51,7 +52,7 @@
     "vue-router": "^4.0.11",
     "vue-types": "^4.1.0",
     "vuedraggable": "^4.1.0",
-    "vxe-table": "^4.0.30",
+    "vxe-table": "^4.1.1",
     "wangeditor": "^4.7.7",
     "xe-ajax": "^4.0.5",
     "xe-utils": "^3.4.0",
