test: vxe-table-plugins

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "vue-router": "^4.0.11",
     "vue-types": "^4.1.0",
     "vuedraggable": "4.1.0",
-    "vxe-table": "4.0.30",
+    "vxe-table": "4.1.5",
+    "vxe-table-plugin-element": "^3.0.5",
     "wangeditor": "4.7.7",
     "xe-ajax": "4.0.5",
     "xe-utils": "3.4.0",
